# school-management-backend-fastapi

./: .env  create-superadmin.py  demo.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1a0abe8230dd_add_and_remove_mutiple_tables.py  28675bb5e19b_add_and_remove_mutiple_tables.py  2fff45caf03a_add_unique_constraint_on_school_id_.py  3d794b3a742b_add_unique_constraint_on_school_id_.py  423cf34fe59e_init.py  4bfdf6aa5190_init.py  4cd5209464d4_init.py  4d4976e36608_add_and_remove_mutiple_tables.py  6059f7a941e9_init.py  6957859b84e9_add_and_remove_mutiple_tables.py  78909165fde7_init.py  91d78d79faab_init.py  9efa73c1f26a_add_and_remove_mutiple_tables.py  9fcd7ec86705_add_unique_constraint_on_school_id_.py  abb873c21757_init.py  b1679069d052_add_and_remove_mutiple_tables.py  bc95a8d3fa00_init.py  d466e7e7d9e3_init.py  d4b6ecdbd25f_init.py  e0f7ff6b2392_add_class_id_foreign_key_to_.py  eb6d3e302d68_init.py  f07fc7c1e67e_init.py
app/: main.py
app/core/: config.py  deps.py
app/db/: base.py  database.py
app/lib/: excel_import.py
app/mappers/: attendance_mapper.py  result_mapper.py
app/models/: __init__.py  academic_session.py  announcement.py  assessment.py  attendance.py  attendance_record.py  attendance_sheet.py  blog_post.py  class_subject.py  class_teacher.py  classes.py  course_material.py  enrollment.py  exam.py  fee_structure.py  fees.py  invite.py  leave_request.py  lesson.py  mark.py  notification.py  parent.py  parent_student.py  password_reset.py  payments.py  refresh_token.py  result.py  result_approval.py  result_batch.py  result_record.py  (+11 more)
(+88 files in other folders)
