[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.1",
    "cloudinary>=1.44.2",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
